--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,9 +10,14 @@
 // mixin
 @import 'mixin/button.scss';
 
-html { font-size: 62.5%; font-size: calc(1em * .625); -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+html {
+    font-size: 62.5%;
+    font-size: calc(1em * .625);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 
-/* 関数電卓非表示 ----------------------------------------------- */
+/* sp表示 ----------------------------------------------- */
 
 * {
     /* padding と border を幅と高さに含める */
@@ -252,8 +257,8 @@ h1 {
 }
 
 .color-4 {
-    // height: 3.6rem !important;
-    // margin: .4rem !important;
+    height: 3.6rem !important;
+    margin: .4rem !important;
     @include btn($color: colors(white), $bg-color: colors(blue_2));
 
     &:active {
@@ -287,7 +292,7 @@ h1 {
     }
 
     .sc-calc {
-        display: table-cell;
+        display: table;
     }
 
 }
