--- a/sass/main.scss
+++ b/sass/main.scss
@@ -233,7 +233,7 @@ h1 {
     }
 }
 
-.color-1 {
+.btn-1 {
     @include btn($color: colors(gray_4), $bg-color: colors(gray_2));
     border: .1rem solid colors(white);
 
@@ -242,7 +242,7 @@ h1 {
     }
 }
 
-.color-2 {
+.btn-2 {
     @include btn($color: colors(gray_4), $bg-color: colors(white_2));
     border: .1rem solid colors(white);
 
@@ -251,12 +251,12 @@ h1 {
     }
 }
 
-.color-3 {
+.btn-3 {
     @include btn($color: colors(gray_1), $bg-color: colors(gray_2));
     border: .1rem solid colors(white);
 }
 
-.color-4 {
+.btn-4 {
     height: 3.6rem !important;
     margin: .4rem !important;
     @include btn($color: colors(white), $bg-color: colors(blue_2));
