関数電卓部修正

--- a/css/main.css
+++ b/css/main.css
@@ -443,6 +443,11 @@ template {
 .btn-1 {
   color: #202124;
   background-color: #dadce0;
+  height: 3.8rem;
+  margin: .2rem;
+  cursor: pointer;
+  line-height: 3.4rem;
+  border-radius: .4rem;
   border: 0.1rem solid white;
 }
 
@@ -453,12 +458,22 @@ template {
 .btn-2 {
   color: #70757a;
   background-color: #dadce0;
+  height: 3.8rem;
+  margin: .2rem;
+  cursor: pointer;
+  line-height: 3.4rem;
+  border-radius: .4rem;
   border: 0.1rem solid white;
 }
 
 .btn-3 {
   color: #202124;
   background-color: #f1f3f4;
+  height: 3.8rem;
+  margin: .2rem;
+  cursor: pointer;
+  line-height: 3.4rem;
+  border-radius: .4rem;
   border: 0.1rem solid white;
 }
 
@@ -471,12 +486,33 @@ template {
   margin: .4rem !important;
   color: white;
   background-color: #4285f4;
+  height: 3.8rem;
+  margin: .2rem;
+  cursor: pointer;
+  line-height: 3.4rem;
+  border-radius: .4rem;
 }
 
 .btn-4:active {
   box-shadow: 0 0.1rem 0.2rem 0 rgba(66, 133, 244, 0.45), 0 0.3rem 0.6rem 0.2rem rgba(66, 133, 244, 0.3);
 }
 
+/* width
+---------------------------------------------------------- */
+.w_33 {
+  width: 33.333333%;
+}
+
+.w_50 {
+  width: 50%;
+}
+
+.w_66 {
+  width: 66.666666%;
+}
+
+/* font-size
+---------------------------------------------------------- */
 .font-s10 {
   font-size: 1.0rem;
 }
@@ -493,15 +529,10 @@ template {
   font-size: 2.0rem;
 }
 
+/* font-weight
+---------------------------------------------------------- */
 .font-w700 {
   font-weight: 700;
-}
-
-html {
-  font-size: 62.5%;
-  font-size: calc(1em * .625);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 /* sp表示 ----------------------------------------------- */
@@ -512,6 +543,13 @@ html {
   cursor: default;
   /* タップ時に青く光るのを透明にして消す */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+html {
+  font-size: 62.5%;
+  font-size: calc(1em * .625);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 input {
@@ -536,14 +574,6 @@ input {
   height: 4.4rem;
   font-size: 1.6rem;
   line-height: 1.6rem;
-}
-
-.btn-tr td > div {
-  height: 3.8rem;
-  margin: .2rem;
-  cursor: pointer;
-  line-height: 3.4rem;
-  border-radius: .4rem;
 }
 
 td {
