--- a/sass/utility/utility.scss
+++ b/sass/utility/utility.scss
@@ -1,3 +1,5 @@
+@import '../mixin/button.scss';
+
 .btn-1 {
     @include btn($color: colors(gray_4), $bg-color: colors(gray_2));
     border: .1rem solid colors(white);
@@ -29,4 +31,42 @@
     &:active {
         box-shadow: 0 .1rem .2rem 0 colors(shadow_1), 0 .3rem .6rem .2rem colors(shadow_2);
     }
+}
+
+/* width
+---------------------------------------------------------- */
+.w_33 {
+    width: 33.333333%;
+}
+
+.w_50 {
+    width: 50%;
+}
+
+.w_66 {
+    width: 66.666666%;
+}
+
+/* font-size
+---------------------------------------------------------- */
+.font-s10 {
+    font-size: 1.0rem;
+}
+
+.font-s14 {
+    font-size: 1.4rem;
+}
+
+.font-s15 {
+    font-size: 1.5rem;
+}
+
+.font-s20 {
+    font-size: 2.0rem;
+}
+
+/* font-weight
+---------------------------------------------------------- */
+.font-w700 {
+    font-weight: 700;
 }
