--- a/sass/utility/utility.scss
+++ b/sass/utility/utility.scss
@@ -1,4 +1,5 @@
 @import '../mixin/button.scss';
+@import '../function/colors.scss';
 
 .btn-1 {
     @include btn($color: colors(gray_4), $bg-color: colors(gray_2));
@@ -32,6 +33,7 @@
 }
 
 .btn-rad-deg {
+    position: relative;
     @include btn($color: colors(gray_4), $bg-color: colors(gray_2));
     height: 3.8rem;
     line-height: 3.4rem;
@@ -43,22 +45,18 @@
 
 /* width
 ---------------------------------------------------------- */
-.w_33 {
-    width: 33.333333%;
-}
-
 .w_50 {
     width: 50%;
-}
-
-.w_66 {
-    width: 66.666666%;
 }
 
 /* font-size
 ---------------------------------------------------------- */
 .font-s10 {
-    font-size: 1.0rem;
+    font-size: 1rem;
+}
+
+.font-s13 {
+    font-size: 1.3rem;
 }
 
 .font-s14 {
@@ -70,11 +68,15 @@
 }
 
 .font-s20 {
-    font-size: 2.0rem;
+    font-size: 2rem;
 }
 
 /* font-weight
 ---------------------------------------------------------- */
+.font-w400 {
+    font-weight: 400;
+}
+
 .font-w700 {
     font-weight: 700;
 }
@@ -83,4 +85,16 @@
 ---------------------------------------------------------- */
 .color_g1 {
     color: colors(gray_1);
+}
+
+/* separator
+---------------------------------------------------------- */
+.separator {
+    content:"";
+    position:absolute;
+    top:10px;
+    bottom:10px;
+    left:50%;
+    border-left:1px solid colors(gray_1);
+    transform:translateX(-50%)
 }
